--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -4,7 +4,7 @@
 # See https://docs.platform.sh/configuration/app.html
 
 # The name of this app. Must be unique within a project.
-name: 'drupal'
+name: 'drupal-2'
 
 # The runtime the application uses.
 type: 'php:8.1'
